--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.datasource.password=${JDBC_PASSWORD}
 
 #JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/sec2024;JDBC_USERNAME=dev;JDBC_PASSWORD=ax2
 
+#det her har jeg ændret
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 #logging.level.root=debug
@@ -15,7 +19,7 @@ server.error.include-stacktrace=never
 app.secret-key=${TOKEN_SECRET}
 
 #60*30 =1800  --> Token is valid for 30 minutes
-app.token-expiration = 1800  
+app.token-expiration = 1800000000000000
 app.token-issuer=dat.kea
 
 # Default role for new users added via the API (POST: /api/user-with-role).
