--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
-                    <encoding>UTF-8</encoding>
+                    <encoding>ISO-8859-1</encoding>
                     <!-- Comment in or out to disable/enable Security tests from your maven build -->
                     <excludedGroups>DisabledSecurityTest</excludedGroups>
                 </configuration>
