--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     </description>
     <properties>
         <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
@@ -104,7 +105,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
-                    <encoding>ISO-8859-1</encoding>
+                    <encoding>UTF-8</encoding>
                     <!-- Comment in or out to disable/enable Security tests from your maven build -->
                     <excludedGroups>DisabledSecurityTest</excludedGroups>
                 </configuration>
