--- a/.github/workflows/main_cinema-backend.yml
+++ b/.github/workflows/main_cinema-backend.yml
@@ -13,6 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL }}
+      JDBC_USERNAME: ${{ secrets.JDBC_USERNAME }}
+      JDBC_PASSWORD: ${{ secrets.JDBC_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v4
 
