Added hikari lifetimes to accommodate for free azure vm

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ app.token-issuer=dat.kea
 
 
 app.default-role=USER
+
+spring.datasource.hikari.max-lifetime=300000 
+spring.datasource.hikari.idle-timeout=30000
+
