--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.error.include-stacktrace=never
 
 app.secret-key=${TOKEN_SECRET}
 
-app.token-expiration = 1800000000000000
+app.token-expiration = 1800
 app.token-issuer=dat.kea
 
 
