timer on reservation in screening done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
